@@ -932,7 +932,7 @@ Point is a command for drawing a point map symbol.
 \NEW{5.3}|<lang:XX>| = creates multilingual label (see |string| type for
    detailed description)
 
-  * |value| = value of height, passage-height, altitude, dimensions, date or extra points
+  * |value| = value of height, passage-height, altitude, dimensions or date
 
       {\it height:} according to the sign of the value (positive, negative or
       unsigned), this type of symbol represents chimney height, pit depth
@@ -961,9 +961,6 @@ Point is a command for drawing a point map symbol.
       |-value <date>|
       sets the date for the date point.
 
-      {\it extra:}
-      |-value <distance>|
-      is a synonym for |-dist <distance>| option.
 \endoptions
 
 
